--- a/image-uploader-master/Server/package.json
+++ b/image-uploader-master/Server/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.19",
     "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
